# masteryos

./: middleware.ts  next.config.js  nixpacks.toml  package.json  railway.json  tailwind.config.js  tsconfig.json  worklog.md
backend/: .coverage  alembic.ini  coverage.xml  pyproject.toml  railway.json  ruff.toml
backend/app/: main.py
backend/app/ai/coach/: __init__.py
backend/app/ai/explanations/: __init__.py
backend/app/ai/gateway/: __init__.py
backend/app/ai/prompts/: __init__.py
backend/app/application/: __init__.py
backend/app/application/assessment/: __init__.py  handlers.py
backend/app/application/beta/: __init__.py  service.py
backend/app/application/beta_ops/: __init__.py  service.py
backend/app/application/billing/: __init__.py
backend/app/application/content/: __init__.py
backend/app/application/identity/: __init__.py  auth_dto.py  auth_service.py  dto.py
backend/app/application/learning/: dto.py  handlers.py
backend/app/application/scheduling/: __init__.py
backend/app/application/shared/: __init__.py
backend/app/domain/administration/: audit_log.py  events.py  exceptions.py  feature_flag.py  organization.py  repository.py
backend/app/domain/assessment/: attempt.py  exceptions.py  question_factory.py  question_instance.py  repository.py  template_engine.py
backend/app/domain/content/: events.py  question_template.py
backend/app/domain/identity/: __init__.py  auth_events.py  events.py  repository.py  user.py
backend/app/domain/learning/: achievement.py  events.py  exceptions.py  learning_goal.py  repository.py  study_session.py
backend/app/domain/mastery/: __init__.py
backend/app/domain/scheduling/: __init__.py  daily_queue.py  queue_generator.py  scheduling_config.py
backend/app/infrastructure/: __init__.py
backend/app/presentation/: dependencies.py
backend/app/shared/: config.py
backend/app/workers/: __init__.py  host.py  metrics.py  processors.py  retry_engine.py  subscriber_registry.py
backend/scripts/: seed_content.py
backend/scripts/railway/: startup_backend.py
backend/tests/: __init__.py  test_content_system.py  test_health.py  test_learning_loop.py
backend/tests/application/: fakes.py  test_learning_handlers.py
backend/tests/auth/: conftest.py  test_additional_flows.py  test_audit_logging.py  test_email_verification.py  test_password_reset.py  test_rate_limit_csrf.py  test_registration.py  test_security_scenarios.py  test_user_profile.py
backend/tests/beta/: test_beta_platform.py
backend/tests/beta_ops/: conftest.py  test_api_routes.py  test_feedback_ops_releases_reports_experiments.py  test_learning_success_instructor.py
backend/tests/deployment/: test_deployment_remediation.py
backend/tests/domain/: test_attempt_aggregate.py  test_content_aggregates.py  test_enrollment.py  test_mastery_calculator.py  test_study_session.py  test_value_objects.py
backend/tests/public_platform/: test_public_platform_deep.py
backend/tests/security/: test_security.py
backend/tests/workers/: conftest.py  test_job_queue.py  test_notifications.py  test_outbox_dispatcher.py  test_retry_engine.py  test_subscriber_registry.py  test_worker_host.py
(+813 files in other folders)
