[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mastery-engine-backend"
version = "0.1.0"
description = "Mastery Engine — adaptive learning platform backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Mastery Engine Team", email = "dev@masteryengine.com" },
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Caching
    "redis[hiredis]>=5.0.0",
    # Logging
    "structlog>=24.1.0",
    # HTTP client (for testing and external calls)
    "httpx>=0.27.0",
    # Security
    "pyjwt[crypto]>=2.8.0",
    "passlib[argon2]>=1.7.4",
    "pyotp>=2.9.0",
    # Validation
    "email-validator>=2.0.0",
    # Observability
    "sentry-sdk[fastapi]>=2.0.0",
    # Utilities
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    # SaaS
    "stripe>=8.0.0",
    # PDF rendering (Phase A — study materials)
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    # Linting & formatting
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    # Type stubs
    "types-passlib",
    # Pre-commit
    "pre-commit>=3.7.0",
]

[project.urls]
Repository = "https://github.com/masteryengine/mastery-engine"

# ================================
# setuptools (for editable install)
# ================================
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ================================
# Pytest
# ================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
